src/tests/snapshots/ast2ir__var_scoping_1.snap
---
created: "2019-03-29T07:31:26.646665700Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    var x = 1;\n    {\n        var x = 2;\n    }\n    x = 3;\n    var x = 4;\n"
---
_ini = <void>
x :- _ini
_ini$1 = 1
x <- _ini$1
<block>:
    _ini$2 = 2
    x <- _ini$2
_val = 3
x <- _val
<dead> = _val
_ini$2 = 4
x <- _ini$2
