src/tests/snapshots/ast2ir__var_scoping_2.snap
---
created: "2019-03-30T04:37:36.396074100Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    var x = 1;\n    {\n        let x = 2;\n        x = 3;\n    }\n    x = 4;\n"
---
_ini = <void>
x :- _ini
_ini$1 = 1
x <- _ini$1
_ini$2 = 2
x$1 :- _ini$2
_val = 3
x$1 <- _val
<dead> = _val
_val$1 = 4
x <- _val$1
<dead> = _val$1
